--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/express-fileupload": "^1.2.2",
 		"bcrypt": "^5.0.1",
 		"config": "^3.3.7",
 		"dayjs": "^1.11.3",
 		"express": "^4.18.1",
+		"express-fileupload": "^1.4.0",
 		"express-validator": "^6.14.1",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
